# snarxiv-bot

./: .gitignore  LICENSE  README.md  snarxiv.cabal
app/: Main.hs
src/Grammar/: Parse.hs  Run.hs  Types.hs
src/Twitter/: Bot.hs
