name:                snarxiv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://snarxiv.org
license:             BSD3
license-file:        LICENSE
author:              David Simmons-Duffin
maintainer:          davidsd@gmail.com
copyright:           2017 David Simmons-Duffin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Grammar.Parse, Grammar.Types, Grammar.Run, Twitter.Bot
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , vector
                     , unordered-containers
                     , random
                     , titlecase
                     , filepath
                     , twitter-conduit
                     , lens
                     , bytestring
                     , case-insensitive
                     , containers
                     , http-conduit
                     , network-uri
  default-language:    Haskell2010

executable snarxiv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snarxiv
                     , text
                     , time
                     , random
  default-language:    Haskell2010

test-suite snarxiv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snarxiv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snarxiv
